--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -19,8 +19,8 @@
 
         <div class="clg-logo ">
 
-            <img id="clg-logo-png" class="mr-3" src="../static/Assets/clg-logo.png" alt="">
-            <img src="../static/Assets/logo-name.svg" alt="">
+            <img id="clg-logo-png" class="mr-3" th:src="@{/Assets/clg-logo.png}" alt="">
+            <img th:src="@{/Assets/logo-name.svg}" alt="">
 
         </div>
 
@@ -93,34 +93,51 @@
 
                                     <!-- HORIZONTAL-NAV -->
                                 
-    <div class="horizontal-nav ">
+    <!--<div class="horizontal-nav ">
 
-        <!--<div class="nav-item">
+        <div class="nav-item">
 
             <a href="#"> User Management </a>
 
             <img class="icon" th:src="@{/Assets/down-arrow-blue.svg}" alt="">
 
         </div>-->
-        <div class="dropdown">
-                <button class="btn dropdown-toggle text-primary" id="dropdownMenuButton1" type="button" data-toggle="dropdown" aria-expanded="false">
-                    User Management</button>
-                
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-    				<li><a class="dropdown-item" href="#">Home</a></li>
-    				<li><a class="dropdown-item" href="#">Add User</a></li>
-    				<li><a class="dropdown-item" href="#">Manage User</a></li>
-    				<li><a class="dropdown-item" href="#">Manage Role</a></li>
-  				</ul>
-        </div>
+        <nav class="horizontal-nav navbar navbar-expand-lg navbar-light">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                        <button class="btn nav-link active dropdown-toggle" id="navbarDropdownMenuLink" type="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            User Management
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" th:href="@{adminHome}">Home</a></li>
+                            <li><a class="dropdown-item" th:href="@{adduser}">Add User</a></li>
+                            <li><a class="dropdown-item" th:href="@{manageuser}">Manage User</a></li>
+                            <li><a class="dropdown-item" th:href="@{managerole}">Manage Role</a></li>
+                            <li><a class="dropdown-item" th:href="@{addleavebalance}">Add Leave Balance</a></li>
+                            <li><a class="dropdown-item" th:href="@{leavehistory}">View Leave History</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </nav>
 
-    </div>
+    
 
                                     <!-- HORIZONTAL-NAV -->
 
 
 </section>
 
+<!-- Option 1: Bootstrap Bundle with Popper -->
+<script th:src="@{https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js}"
+integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+crossorigin="anonymous"></script>
 
 
 </body>
