--- a/src/main/resources/templates/common/login.html
+++ b/src/main/resources/templates/common/login.html
@@ -60,7 +60,7 @@
       </div>
 
       <div class="font">
-        <input type="text" name="username" id="username" class="form-control field" placeholder="Username*">
+        <input type="text" name="username" id="username" class="form-control field" placeholder="Email*">
         <input type="password" name="password" id="password" class="form-control" placeholder="Password*">           
       </div>
       
