--- a/src/main/resources/templates/common/profile.html
+++ b/src/main/resources/templates/common/profile.html
@@ -65,12 +65,12 @@
             <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg"><span class="font-weight-bold">Edogaru</span><span class="text-black-50">edogaru@mail.com.my</span><span> </span></div>
         </div>
         <div class="col-md-9 border-right">
-            
+            <div class="col-md-12"><h3>User Profile</h3></div>
             <div class="p-3 py-5">
                 
                 <div class="row mt-2">
                     <div class="col-md-6"><label class="labels">Full Name</label><label  class="form-control">XYZ</label></div>
-                    <div class="col-md-6"><label class="labels">Email-id</label><label class="form-control" >XYZ@gmail.com</label></div>                   
+                    <div class="col-md-6"><label class="labels">Email-id</label><label class="form-control" >XYZ@gmail.com</label></div>              
                 
                     <div class="col-md-6"><label class="labels">Password</label><label class="form-control">*****</label></div>
                     <div class="col-md-6"><label class="labels">DOB</label><label class="form-control">11-nov-21</label></div>
@@ -99,13 +99,7 @@
                 
             </div>
         </div>
-        <div class="col-md-4">
-            <div class="p-3 py-5">
-                <div class="row mt-3">
-                
-                </div>
-            </div>
-        </div>
+        
     </div>
 </div>
 
