--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -702,3 +702,46 @@ background: linear-gradient(to right, #155799, #159957); /* W3C, IE 10+/ Edge, F
   display: flex;
   align-items: center;
 }
+
+.managerole-main{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50% , -55%);
+}
+.search-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  width: 90%;
+  height: 10%;
+  border: 2px solid #2980b9;
+  padding: 8px;
+  border-radius: 8px;
+
+  margin: auto;
+}
+
+.elementsContainer {
+  width: 100%;
+  height: 100%;
+  vertical-align: middle;
+}
+
+.search {
+  border: none;
+  height: 100%;
+  width: 100%;
+  padding: 0px 5px;
+  border-radius: 50px;
+  font-size: 18px;
+  font-family: "Nunito";
+  color: #424242;
+  font-weight: 500;
+}
+
+.search:focus {
+  outline: none;
+}
