--- a/src/main/resources/templates/admin/manageuser.html
+++ b/src/main/resources/templates/admin/manageuser.html
@@ -84,7 +84,7 @@
         }
     	button>a {
             text-decoration: none;
-            color: #42ba96;
+            color: #ba4242;
         }
 
         button>a:hover {
@@ -103,19 +103,16 @@
 
 <body>
 <header th:insert="header.html :: nav"></header>
-    <!---Search bar-->
-    <div class="boxContainer mt-5">
-        <table class="elementsContainer">
-            <tr>
-                <td>
-                    <input type="text" placeholder="Search Email/Username" class="search">
-                </td>
-                <td>
-                    <a href="#"><i class="material-icons">search</i></a>
-                </td>
-            </tr>
-        </table>
-    </div>
+
+
+<main class="managerole-main" style="width: 70%;">
+
+        <!---Search bar-->
+        <div class=" search-container" >
+             
+            <input type="text" placeholder="Search Email/Username" class="search">
+            <a href="#"><i class="material-icons">search</i></a>
+        </div>
 
     <!--user information-->
     <div class="container mt-5 font">
@@ -124,65 +121,66 @@
         </div><br>
         <div class="row">
             <div class="table-responsive">
-                <table class="table table-striped table-hover">
+                <table class="table table-sm table-striped table-hover shadow">
                     <thead>
                         <tr>
-                            <th scope="col">Name</th>
-                            <th scope="col">UserID</th>
-                            <th scope="col">Email</th>
-                            <th scope="col">Mobile Number</th>
-                            <th scope="col">Role</th>
-                            <th scope="col">Action</th>
+                            <th scope="col name">Name</th>
+                            <th scope="col user-id">UserID</th>
+                            <th scope="col mob-no">Mobile Number</th>
+                            <th scope="col role">Role</th>
+                            <th scope="col action">Action</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td>
-                                <div class="row justify-content-start">
-                                    <div class="col-md-2">
-                                        <i class="fas fa-user-circle fa-2x"></i>
+                            <td >
+                                <div class="row name justify-content-start">
+                                    <div class="col-md-2 center" style="margin-left: 20px;">
+                                        <img id="user-image" th:src="@{/Assets/profile.svg}" alt="">
                                     </div>
-                                    <div class="col-md-3">
-                                        <p>xyz<br><small>Staff</small></p>
+                                    <div class="col center" >
+                                        <p style="margin: 0px;" >First Name Last Name<br><small>Staff</small></p>
                                     </div>
                                 </div>
                             </td>
-                            <td>123</td>
-                            <td>xyz@gmail.com</td>
-                            <td>123456789</td>
-                            <td>xxx</td>
+                            <td>12345</td>
+                            <td>99999999999</td>
+                            <td>--</td>
                             <td>
-                                <button type="button" class="btn btn-sm btn-outline-danger"><i
-                                        class="fas fa-trash-alt"></i></button>
-                                <button type="button" class="btn btn-sm btn-outline-success"><a href="edituser.html"><i
-                                            class="fas fa-pencil-alt"></i></a></button>
+                                <button type="button" class="btn btn-sm btn-outline-success"><i
+                                  class="fas fa-pencil-alt"></i></a></button>
+                                  <button type="button" class="btn btn-sm btn-outline-danger"><a href="edituser.html"><i
+                                      class="fas fa-trash-alt"></i></button>
                             </td>
                         </tr>
                         <tr>
-                            <td>
-                                <div class="row">
-                                    <div class="col-md-2">
-                                        <i class="fas fa-user-circle fa-2x"></i>
-                                    </div>
-                                    <div class="col-md-2">
-                                        <p>xyz<br><small>Student</small></p>
-                                    </div>
-                                </div>
-                            </td>
-                            <td>234</td>
-                            <td>xyz12@gmail.com</td>
-                            <td>945739575</td>
-                            <td>xxx</td>
-                            <td>
-                                <button type="button" class="btn btn-sm btn-outline-danger"><i
-                                        class="fas fa-trash-alt"></i></button>
-                                <button type="button" class="btn btn-sm btn-outline-success"><a href="edituser.html"><i
-                                            class="fas fa-pencil-alt"></i></a></button>
-                            </td>
-                        </tr>
+                          <td >
+                              <div class="row name justify-content-start">
+                                  <div class="col-md-2 center" style="margin-left: 20px;">
+                                      <img id="user-image" th:src="@{/Assets/profile.svg}" alt="">
+                                  </div>
+                                  <div class="col center" >
+                                      <p style="margin: 0px;" >First Name Last Name<br><small>Student</small></p>
+                                  </div>
+                              </div>
+                          </td>
+                          <td>67890</td>
+                          <td>66666666666</td>
+                          <td>--</td>
+                          <td>
+                              <button type="button" class="btn btn-sm btn-outline-success"><i
+                                class="fas fa-pencil-alt"></i></a></button>
+                                <button type="button" class="btn btn-sm btn-outline-danger"><a href="edituser.html"><i
+                                    class="fas fa-trash-alt"></i></button>
+                          </td>
+                      </tr>
                     </tbody>
                 </table>
             </div>
+        </div>
+    </div>
+
+</main>
 <div id="footer" th:insert="footer.html :: footer"></div>
 </body>
 
