--- a/src/main/resources/templates/admin/viewUsers.html
+++ b/src/main/resources/templates/admin/viewUsers.html
@@ -122,46 +122,28 @@
 			<table class="table table-striped table-hover">
 				<thead>
 					<tr>
-						<th scope="col">Name</th>
 						<th scope="col">UserID</th>
+						<th scope="col">Name</th>
 						<th scope="col">Email</th>
+						<th scope="col">Gender</th>
+						<th scope="col">Role</th>
+						<th scope="col">Department ID</th>
 						<th scope="col">Mobile Number</th>
-						<th scope="col">Department</th>
-						<th scope="col">Designation</th>
-						<th scope="col">Action</th>
+						<th scope="col">address</th>
 					</tr>
 				</thead>
 
 				<tbody>
-					<tr>
-						<td>
-							<div class="row justify-content-start">
-								<div class="col-md-3">
-									<i class="fas fa-user-circle fa-2x"></i>
-								</div>
-								<div class="col-md-3">
-									<p>xyz<br><small>Faculty</small></p>
-								</div>
-							</div>
-						</td>
-						<td>123</td>
-						<td>xyz@gmail.com</td>
-						<td>123456789</td>
-						<td>Computer</td>
-						<td>xxx</td>
-
-						<td>
-							<button type="button" class="btn btn-sm btn-outline-success"><a th:href="@{edituser}"><i
-										class="fas fa-pencil-alt"></i></a></button>
-							<button type="button" class="btn btn-sm btn-outline-danger"><i
-									class="fas fa-trash-alt"></i></button>
-						</td>
-					</tr>
+					
 					<tr th:each="user : ${allUsers}">
-						<td th:text="${user.email}">Student ID</td>
+						<td th:text="${user.id}">Student ID</td>
 						<td th:text="${user.name}">Student Name</td>
-						<td th:text="${user.role}">Student City</td>
-
+						<td th:text="${user.email}">Student Email</td>
+						<td th:text="${user.gender}">Gender</td>
+						<td th:text="${user.role}">Role</td>
+						<td th:text="${user.deptId}">Department ID</td>
+						<td th:text="${user.mobileNumber}">Mobile Number</td>
+						<td th:text="${user.address}">Address</td>
 						<td>
 							<button type="button" class="btn btn-sm btn-outline-success"><a th:href="@{edituser}"><i
 										class="fas fa-pencil-alt"></i></a></button>
