--- a/src/main/resources/templates/admin/adduser.html
+++ b/src/main/resources/templates/admin/adduser.html
@@ -82,7 +82,7 @@
 
           <div class="form-group col-md-6">
             <label for="inputAddress">Address*</label>
-            <input type="text" class="form-control" id="inputAddress" placeholder="Address here ..." required>
+            <input type="text" class="form-control" name="address" id="inputAddress" placeholder="Address here ..." required>
           </div>
 
         </div>
@@ -97,7 +97,7 @@
 
           <div class="form-group col-md-6">
             <label for="inputNum">Mobile number*</label>
-            <input type="tel" class="form-control" id="inputNum" placeholder="Mobile number" required>
+            <input type="tel" class="form-control" name="mobileNumber" id="inputNum" placeholder="Mobile number" required>
           </div>
 
         </div>
@@ -117,11 +117,11 @@
 
           <div class="form-group col-md-4">
             <label for="inputAdhar">Aadhar-Card Number*</label>
-            <input type="text" class="form-control" id="inputAdhar" placeholder="Aadhar Number" required>
+            <input type="text" class="form-control" name="aadharNumber" id="inputAdhar" placeholder="Aadhar Number" required>
           </div>
           <div class="form-group col-md-4">
             <label for="inputPan">Pan Number*</label>
-            <input type="text" class="form-control" id="inputPan" placeholder="Pan Number" required>
+            <input type="text" class="form-control" name="panNumber" id="inputPan" placeholder="Pan Number" required>
           </div>
           <div class="form-group col-md-4">
             <label>Department Name*</label>
