--- a/src/main/resources/templates/admin/adduser.html
+++ b/src/main/resources/templates/admin/adduser.html
@@ -130,7 +130,7 @@
           </div>
           <div class="form-group col-md-4">
             <label for="inputAdhar">Date Of Joining*</label>
-            <input type="date" class="form-control" id="DOJ" required>
+            <input type="date" class="form-control" name="doj" id="DOJ" required>
           </div>
         </div>
 
