--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -136,7 +136,7 @@ a.site-logo {
   .site-navbar {
     min-height: 60px;
   }
-  .site-navbar ul {
+  .btn{
     position: absolute;
     width: 100%;
     height: calc(100vh - 60px);
