--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -468,9 +468,9 @@ font-size: 0.7rem;
 }
 
 .profile-button {
-    background: rgb(99, 39, 120);
-    box-shadow: none;
-    border: none
+    color:white;
+    height:100%;
+    background-color:red
 }
 
 .profile-button:hover {
@@ -744,4 +744,12 @@ background: linear-gradient(to right, #155799, #159957); /* W3C, IE 10+/ Edge, F
 
 .search:focus {
   outline: none;
+}
+.button {
+	padding:5px 6px 1px 6px;
+    color:white !important;
+    border-radius:3px;
+    height:30px;
+    background-color:blue;
+    text-decoration: none;
 }
