--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8"/>
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link rel="stylesheet" th:href="@{/css/index.css}">
+    <link rel="stylesheet" th:href="@{/css/header.css}">
     <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css}" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <style>
 body{
@@ -40,39 +41,12 @@ body{
 
 
             <!-- USER_INFO  -->
-             <ul>
-             	<li><a sec:authorize="!isAuthenticated()" th:href="@{/signin}">Login</a></li>
-             </ul>
-            <div class="profile-part" >
-        
-                <div class="user-info ">
-        
-                        <span id="user-department" th:text="@{user.name}">
-                                Department
-                        </span>
-        
-                        <span id="user-role">
-                            Professor
-                        </span>
-        
-                </div>
-                
-
-        
-                
-                                  <div class="dropdown" >
-                                    <a class="dropbtn">
-                                      <img id="user-image"  th:src="@{/Assets/profile.svg}" alt="">
-                                      <img  class="icon" id="down-arrow"  th:src="@{/Assets/down-arrow-blue.svg}" alt="icon">
-                                    </a>
-                                    <div class="dropdown-content">
-                                      <a class="drop-link" th:href="@{/profile}">Profile</a>
-                                      <a class="drop-link" href="#">Link 2</a>
-                                      <a class="drop-link" href="#">Logout</a>
-                                    </div>
-                                  </div>
-        
-        
+            
+            <div class="profile-part">
+                            <a type="button" class="button" sec:authorize="hasAuthority('ADMIN')" th:href="@{/admin/view-users}">Admin</a>
+                        	<a type="button" class="button" sec:authorize="!isAuthenticated()" th:href="@{/signin}">Login</a>
+		               		<a type="button" class="button" sec:authorize="isAuthenticated()" th:href="@{/logout}">Logout</a>
+		               		<a type="button" class="button" sec:authorize="isAuthenticated()" th:href="@{/profile}">Profile</a>
             </div>
         
                 <!-- USER_INFO  -->
