--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,22 +4,29 @@
 <meta charset="UTF-8"/>
 <link rel="stylesheet" th:href="@{/css/index.css}">
 <link rel="stylesheet" th:href="@{/css/header.css}">
+    <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css}" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
+<style type="text/css">
+.navstiplogo{
+	navstiplogo:100px;
+}
+</style>
 </head>
 <body>
 	<header th:insert="header.html :: nav"></header>
-	<div class="container">
+	<div class="container mt-5">
     	<span class="navstiplogo">
     		<div class="label">
-    			<a href="https://bitwardha.ac.in/" class="navbar-brand img-fluid -link" rel="home" aria-current="page"><img width="1181" height="152" src="https://bitwardha.ac.in/wp-content/uploads/2020/08/logo.png" class="navbar-brand img-fluid " alt="Bajaj Institute of Technology Wardha" srcset="https://bitwardha.ac.in/wp-content/uploads/2020/08/logo.png 1181w, https://bitwardha.ac.in/wp-content/uploads/2020/08/logo-300x39.png 300w, https://bitwardha.ac.in/wp-content/uploads/2020/08/logo-1024x132.png 1024w, https://bitwardha.ac.in/wp-content/uploads/2020/08/logo-768x99.png 768w" sizes="(max-width: 1181px) 100vw, 1181px"></a></span>
+    			<a href="https://bitwardha.ac.in/" class="navbar-brand img-fluid -link" rel="home" aria-current="page"><img width="1181" height="152" src="https://bitwardha.ac.in/wp-content/uploads/2020/08/logo.png" class="navbar-brand img-fluid logomain" alt="Bajaj Institute of Technology Wardha" srcset="https://bitwardha.ac.in/wp-content/uploads/2020/08/logo.png 1181w, https://bitwardha.ac.in/wp-content/uploads/2020/08/logo-300x39.png 300w, https://bitwardha.ac.in/wp-content/uploads/2020/08/logo-1024x132.png 1024w, https://bitwardha.ac.in/wp-content/uploads/2020/08/logo-768x99.png 768w" sizes="(max-width: 1181px) 100vw, 1181px"></a></span>
 			</div>
 		<section class="bit-times py-3 py-lg-5 ">
       <div class="container">
         <div class="row">
           <div class="col-12 text-justify">
-            <h2> BIT <span>Times</span></h2>
-            <p><img class="main-page-image" src="https://bitwardha.ac.in/wp-content/themes/bajaj-institute/assets/img/topi.svg"></p>
+            <h2 style="margin-bottom: -6%"> BIT <span>Times</span></h2>
+            <p style="margin-bottom: -6%"><img class="main-page-image" src="https://bitwardha.ac.in/wp-content/themes/bajaj-institute/assets/img/topi.svg"></p>
           </div>
                               <div class="col-12 col-md-6 col-lg-4 pb-4">
             <div class="card">
