--- a/src/main/resources/templates/admin/viewUsers.html
+++ b/src/main/resources/templates/admin/viewUsers.html
@@ -20,6 +20,15 @@
     <link rel="preconnect" th:href="@{https://fonts.gstatic.com}" crossorigin>
 	
 	<style>
+
+
+		main{
+
+			height: calc(100vh - 60px - 82px  - 40px); /*  Adjustment for main height ( 60px - header , 82px - footer , 40px - adjustment) */
+
+		}
+
+
 		.boxContainer {
             margin: auto;
             position: relative;
@@ -86,98 +95,104 @@
 
 <body>
 	<header th:insert="header.html :: nav"></header>
-	<div>
-	<!---Search bar-->
-     <div class="boxContainer"  style="margin-top: 7%;">
-     	<form th:action="@{/admin/view-users}" method="get">
-	        <table class="elementsContainer">
-	            <tr>
-	                <td>
-	                    <input type="text" name="keyword" id="keyword" placeholder="Search Email/Username" class="search">
-	                </td>
-	                <td>
-	                    <button  type="submit"><i class="material-icons">search</i></button>
-	                </td>
-	            </tr>
-	        </table>
-        </form>
-    </div> 
-    
 
-	<div class="container mt-5">
+	<main>
+
 		<div>
-			<a th:href="@{adduser}" class="btn btn-sm btn-primary">Add Student</a>
-		</div>
-
-		<!--<div class="alert strip container" role="alert">
-			<div class="row">
-				<div class="col-md-6">
-					<form class="d-flex">
-						<input class="form-control me-2" type="search" placeholder="Search by Email, Name "
-							aria-label="Search">
-						<button class="btn btn-outline-success" type="submit">Search</button>
-					</form>
-				</div>
-			</div>
-		</div>-->
-
-		<div class="table-responsive mt-4">
-			<table class="table table-striped table-hover">
-				<thead>
+		<!---Search bar-->
+		 <div class="boxContainer"  style="margin-top: 7%;">
+			 <form th:action="@{/admin/view-users}" method="get">
+				<table class="elementsContainer">
 					<tr>
-						<th scope="col">UserID</th>
-						<th scope="col">Name</th>
-						<th scope="col">Email</th>
-						<th scope="col">Gender</th>
-						<th scope="col">Role</th>
-						<th scope="col">Department ID</th>
-						<th scope="col">Mobile Number</th>
-						<th scope="col">address</th>
-					</tr>
-				</thead>
-
-				<tbody>
-					
-					<tr th:each="user : ${allUsers}">
-						<td th:text="${user.id}">Student ID</td>
-						<td th:text="${user.name}">Student Name</td>
-						<td th:text="${user.email}">Student Email</td>
-						<td th:text="${user.gender}">Gender</td>
-						<td th:text="${user.role}">Role</td>
-						<td th:text="${user.deptId}">Department ID</td>
-						<td th:text="${user.mobileNumber}">Mobile Number</td>
-						<td th:text="${user.address}">Address</td>
 						<td>
-							<button type="button" class="btn btn-sm btn-outline-success"><a th:href = "@{/admin/edituser/{id}(id=${user.id})}"><i
-										class="fas fa-pencil-alt"></i></a></button>
-							<button type="button" class="btn btn-sm btn-outline-danger"><i
-									class="fas fa-trash-alt"></i></button>
+							<input type="text" name="keyword" id="keyword" placeholder="Search Email/Username" class="search">
 						</td>
 						<td>
-							<div class="btn-group " role="group" aria-label="Basic mixed styles example">
-							  <button type="button" class="btn btn-success fas fa-pencil-alt"></button>
-							  <button type="button" class="btn btn-warning bi bi-list">
-							  	<div class="dropdown">
-								  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-								    Dropdown button
+							<button  type="submit"><i class="material-icons">search</i></button>
+						</td>
+					</tr>
+				</table>
+			</form>
+		</div> 
+		
+	
+		<div class="container mt-5">
+			<div>
+				<a th:href="@{adduser}" class="btn btn-sm btn-primary">Add Student</a>
+			</div>
+	
+			<!--<div class="alert strip container" role="alert">
+				<div class="row">
+					<div class="col-md-6">
+						<form class="d-flex">
+							<input class="form-control me-2" type="search" placeholder="Search by Email, Name "
+								aria-label="Search">
+							<button class="btn btn-outline-success" type="submit">Search</button>
+						</form>
+					</div>
+				</div>
+			</div>-->
+	
+			<div class="table-responsive mt-4">
+				<table class="table table-striped table-hover">
+					<thead>
+						<tr>
+							<th scope="col">UserID</th>
+							<th scope="col">Name</th>
+							<th scope="col">Email</th>
+							<th scope="col">Gender</th>
+							<th scope="col">Role</th>
+							<th scope="col">Department ID</th>
+							<th scope="col">Mobile Number</th>
+							<th scope="col">address</th>
+						</tr>
+					</thead>
+	
+					<tbody>
+						
+						<tr th:each="user : ${allUsers}">
+							<td th:text="${user.id}">Student ID</td>
+							<td th:text="${user.name}">Student Name</td>
+							<td th:text="${user.email}">Student Email</td>
+							<td th:text="${user.gender}">Gender</td>
+							<td th:text="${user.role}">Role</td>
+							<td th:text="${user.deptId}">Department ID</td>
+							<td th:text="${user.mobileNumber}">Mobile Number</td>
+							<td th:text="${user.address}">Address</td>
+							<td>
+								<button type="button" class="btn btn-sm btn-outline-success"><a th:href = "@{/admin/edituser/{id}(id=${user.id})}"><i
+											class="fas fa-pencil-alt"></i></a></button>
+								<button type="button" class="btn btn-sm btn-outline-danger"><i
+										class="fas fa-trash-alt"></i></button>
+							</td>
+							<td>
+								<div class="btn-group " role="group" aria-label="Basic mixed styles example">
+								  <button type="button" class="btn btn-success fas fa-pencil-alt"></button>
+								  <button type="button" class="btn btn-warning bi bi-list">
+									  <div class="dropdown">
+									  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+										Dropdown button
+									  </button>
+									  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+										<li><a class="dropdown-item" href="#">Action</a></li>
+										<li><a class="dropdown-item" href="#">Another action</a></li>
+										<li><a class="dropdown-item" href="#">Something else here</a></li>
+									  </ul>
+									</div>
 								  </button>
-								  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-								    <li><a class="dropdown-item" href="#">Action</a></li>
-								    <li><a class="dropdown-item" href="#">Another action</a></li>
-								    <li><a class="dropdown-item" href="#">Something else here</a></li>
-								  </ul>
 								</div>
-							  </button>
-							</div>
-						</td>
-					</tr>
-				</tbody>
-
-			</table>
+							</td>
+						</tr>
+					</tbody>
+	
+				</table>
+			</div>
 		</div>
-	</div>
-	</div>
-	<div id="footer" th:insert="footer.html :: footer"></div>
+		</div>
+	</main>
+	
+	<div id="scroll-footer" th:insert="footer.html :: footer"></div>
+
 	<script th:src="@{/js/script.js}"></script>
 </body>
 
